# swim-protocol

./: CMakeLists.txt  README.md
include/: fsa.hpp  messages.hpp  networking.hpp
networking/: server  server.c
src/: fsa.cpp  main.cpp  networking.cpp  server.cpp
test/: FiniteStateMachineSpec.cpp
